--- a/notebooks/eda/kelmarsh.ipynb
+++ b/notebooks/eda/kelmarsh.ipynb
@@ -9,15 +9,18 @@
    "source": [
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from torch_geometric.data import Data\n",
-    "from torch_geometric.nn import GATConv\n",
-    "from torch_geometric.utils import to_networkx\n",
-    "import warnings\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3790fc45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "34e79ed6-157a-4aba-b6d2-6afc2c540ab5",
    "metadata": {},
    "outputs": [],
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ee5829f2-881d-4cbb-83ae-90869645c07c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dc4ce94b-4a55-452b-9bec-656315ef5dd1",
    "metadata": {},
    "outputs": [],
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "deac7744-bc2b-43a8-a0e9-db63d6420510",
    "metadata": {},
    "outputs": [
@@ -251,7 +254,7 @@
        "[52560 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b7333d7b-2ba8-4aa4-afc3-91350f58c4f6",
    "metadata": {},
    "outputs": [
@@ -292,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "37c6b9ec-e900-458d-b717-13b022f7b878",
    "metadata": {},
    "outputs": [],
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f2d51ba5-6d10-4fbd-894f-d5512219d099",
    "metadata": {},
    "outputs": [
@@ -476,7 +479,7 @@
        "5        135.039      UK                 15/04/2016  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "40ecc272-d415-4ef0-97af-fde685e699cf",
    "metadata": {},
    "outputs": [
@@ -515,7 +518,7 @@
       " 12  Country                     6 non-null      object \n",
       " 13  Commercial Operations Date  6 non-null      object \n",
       "dtypes: float64(4), int64(2), object(8)\n",
-      "memory usage: 800.0+ bytes\n"
+      "memory usage: 804.0+ bytes\n"
      ]
     }
    ],
@@ -533,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6a83958d-9678-4dff-8890-8efa7ea76991",
    "metadata": {},
    "outputs": [
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a9d91921-76f4-4398-b868-8e395c511e39",
    "metadata": {},
    "outputs": [
@@ -599,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "215af2d2-212c-458c-b7d1-c1ff3a3908f9",
    "metadata": {},
    "outputs": [
@@ -636,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
