--- a/notebooks/eda/aemo.ipynb
+++ b/notebooks/eda/aemo.ipynb
@@ -64,13 +64,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datapath = 'C:/Users/ga84cip/LocalRepos/gnn_wind_power_forecasting/data/raw/aemo/'\n",
+    "datapath = '../../data/raw/aemo/'\n",
     "figurepath = '../../reports/figures/aemo/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "af26fb99-7ae1-4a3f-94bc-9dcae9a5b036",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "c105e0c2-7ab1-499f-9f95-a291b8d4dca0",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "[210237 rows x 455 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "d67844bc-0b8d-4d07-bde5-891605723d99",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "fa357adc-067e-4825-bf8e-1c25ff20f6bd",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "2c96d610",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "8274422e-e73a-473c-ace3-bc3bdf774019",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "3a5f1275-cdc1-49c4-87d3-4bae95d20d67",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "35040"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "8af053d2-04e8-4794-bf65-d9cadde4b38f",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "abff2bc0-466d-49b1-a0c8-452d45c13f39",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "9ac27f0e-2506-45ff-bcb5-b14fe6dc1d59",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "bcd845f6-086a-438a-96e9-23ae8d789797",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "ba401cc3-c64a-4841-942c-c7bed3b9d7cd",
    "metadata": {},
    "outputs": [],
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "id": "a209f1f5-30af-43e1-b979-b374e7a3b498",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "5543836d-742a-4bcf-9a10-dfc7d9d17b0f",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "id": "dc143abe-33f0-4fbb-896c-a3c8c7ce3dce",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "8a20a757-da53-49bd-9481-50b678a1c7b8",
    "metadata": {},
    "outputs": [],
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "id": "0ea2cd00-345c-432e-a5ad-469138a1ae87",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "id": "34facef3-1f7d-41da-bffc-e9e0d4392471",
    "metadata": {},
    "outputs": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "id": "40200c1e-d8a1-44ac-b0f1-490d409a2675",
    "metadata": {},
    "outputs": [],
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "47bb8b9c-042a-4820-9bcc-7e193642dd7b",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "id": "7c3eb88e-7778-4f8d-bc41-a0c6a823fdb7",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "id": "6eb0be63-f91a-4b18-9fe5-e11df6a7d5a3",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "id": "1fe6381e-1e85-4360-ba3d-5c2b24c2a980",
    "metadata": {},
    "outputs": [],
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "id": "01c20734-b8dd-4ee9-8122-ee7636d02b1f",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "id": "946425e8-a49a-4b0f-b4a5-b39d47563cc4",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1152,7 @@
        "63     SNOWSTH1          Snowtown South Wind Farm -33.83127  138.11839"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
